--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  // appsettings.json
+  "ConnectionStrings": {
+    "SupermarketDB": null,
+    "MyDatabaseConnection": "Server=localhost;Database=SupermarketEF;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
+
+
 }
