configurar cadena de conexion

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,12 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  // appsettings.json
   "ConnectionStrings": {
-    "SupermarketDB": null,
-    "MyDatabaseConnection": "Server=localhost;Database=SupermarketEF;Trusted_Connection=True;"
+    "SupermarketDB": "Data Source=(localdb)\\mssqllocalDB;Database=SupermarketEF;Trusted_Connection=True;"
   },
+
   "AllowedHosts": "*"
-
-
 }
