--- a/SupermarketWEB.csproj
+++ b/SupermarketWEB.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Categorie\**" />
+    <Content Remove="Pages\Categorie\**" />
+    <EmbeddedResource Remove="Pages\Categorie\**" />
+    <None Remove="Pages\Categorie\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
